# magkeyboard

./: .gitignore  arrange_keyboard.py  circuitpython_pixel_colorer.py  circuitpython_testing.py  key_spec  keyspec_to_rustcode.py  maghand_jan25_data.py  make_keyboard_layout.py  notes  plot_testing.py  realtime_mag.py  test_kalman.py
maghand/: Seeed_Studio_XIAO_Series.kicad_sym  fp-lib-table  keybank.kicad_sch  keypad.kicad_sch  maghand.bak  maghand.csv  maghand.kicad_dru  maghand.kicad_pcb  maghand.kicad_prl  maghand.kicad_pro  maghand.kicad_sch  maghand.kicad_sym  sym-lib-table
maghand-firmware/: Cargo.toml  Dockerfile  memory.x  power_notes  rust-toolchain.toml
maghand-firmware/src/: hardware_consts.rs  keys.rs  main.rs  usb_hid.rs  usb_kb.rs
maghand/maghand.pretty/: Key Holder.kicad_mod  XIAO-nRF52840-Plus-SMD_bathole.kicad_mod  XIAO-nRF52840-Plus-SMD_batpinholes.kicad_mod
