[package]
edition = "2024"
name = "maghand-firmware"
version = "0.1.0"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
resolver = "2"

[[bin]]
name = "maghand-firmware"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt", "usbd-hid"] }
embassy-futures = { version = "0.1.2" }
usbd-hid = "0.8.2"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.9", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }

heapless = "0.9.2"

smart-leds = "0.4.0"
ws2812-spi = "0.5.1"
static_cell = "2.1.1"

lsm6ds3tr = "0.2.2"
embedded-alloc = "0.6.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[features]
# enables adc value output on defmt debug channel
adc_debug = []